add twirp-ruby as a link

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<div>
 			<h1>cyrusaf.dev</h1>
 			<a href="https://github.com/cyrusaf/workerpool">github.com/cyrusaf/workerpool</a>
+			<a href="https://github.com/twitchtv/twirp-ruby">github.com/twitchtv/twirp-ruby</a>
 		</div>
 	</body>
 </html>
