--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 	<body>
 		<div>
 			<h1>cyrusaf.dev</h1>
+			<a href="https://gpx.cyrusaf.dev">https://gpx.cyrusaf.dev</a>
 			<a href="https://github.com/cyrusaf/ctxlog">github.com/cyrusaf/ctxlog</a>
 			<a href="https://github.com/cyrusaf/ratelimit">github.com/cyrusaf/ratelimit</a>
 			<a href="https://github.com/cyrusaf/workerpool">github.com/cyrusaf/workerpool</a>
 			<a href="https://github.com/cyrusaf/rust-ratelimit">github.com/cyrusaf/rust-ratelimit</a>
 			<a href="https://github.com/twitchtv/twirp-ruby">github.com/twitchtv/twirp-ruby</a>
+			<a href="mailto:forbescyrus@gmail.com">forbescyrus@gmail.com</a>
 		</div>
 	</body>
 </html>
