--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<div>
 			<h1>cyrusaf.dev</h1>
-			<a href="https://gpx.cyrusaf.dev">https://gpx.cyrusaf.dev</a>
+			<a href="https://gpx.cyrusaf.dev">gpx.cyrusaf.dev</a>
 			<a href="https://github.com/cyrusaf/ctxlog">github.com/cyrusaf/ctxlog</a>
 			<a href="https://github.com/cyrusaf/ratelimit">github.com/cyrusaf/ratelimit</a>
 			<a href="https://github.com/cyrusaf/workerpool">github.com/cyrusaf/workerpool</a>
