--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			<a href="https://gpx.cyrusaf.dev">gpx.cyrusaf.dev</a>
 			<a href="https://github.com/cyrusaf/ctxlog">github.com/cyrusaf/ctxlog</a>
 			<a href="https://github.com/cyrusaf/ratelimit">github.com/cyrusaf/ratelimit</a>
+			<a href="https://github.com/cyrusaf/broadcast">github.com/cyrusaf/broadcast</a>
 			<a href="https://github.com/cyrusaf/workerpool">github.com/cyrusaf/workerpool</a>
 			<a href="https://github.com/cyrusaf/rust-ratelimit">github.com/cyrusaf/rust-ratelimit</a>
 			<a href="https://github.com/twitchtv/twirp-ruby">github.com/twitchtv/twirp-ruby</a>
